# elfrfdet

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  maldet.toml  pyproject.toml
.github/workflows/: ci.yml
src/elfrfdet/: __init__.py  cli.py  config.py  configs.py  detector.py  features.py  text256.py
tests/: test_configs.py  test_detector.py  test_features.py  test_manifest.py  test_models.py  test_text256.py
